build: configure Maven Compiler Plugin to use Java 17